# ARHS-thermx

./: README.md  platformio.ini
Plugins/Thermx/: CMakeCache.txt  CMakeLists.txt  Factory.cpp  Makefile  ThermxController.cpp  ThermxController.hpp  ThermxRenderer.cpp  ThermxRenderer.hpp  cmake_install.cmake
espCode/: platformio.ini
espCode/src/: I2CManagement.cpp  main.cpp
include/: I2CManagement.hpp  PinDefinitions.hpp
src/: main.cpp
testApp/: build.sh  test  test.cpp
